<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".AccountCreationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:paddingTop="64dp"
        android:paddingBottom="32dp">

        <!--Heading -->
        <TextView
            android:id="@+id/createAccountHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account_heading"
            android:fontFamily="@font/cormorant_garamond"
            android:textSize="44sp"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/createAccountSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account_subtitle"
            android:fontFamily="@font/cormorant_garamond"
            android:textStyle="italic"
            android:textSize="16sp"
            android:textColor="@color/colorGold"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/createAccountHeading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:text="@string/continue_with_google"
            android:fontFamily="@font/outfit"
            android:textSize="14sp"
            android:letterSpacing="0.02"
            android:textColor="@color/colorButtonText"
            android:background="@drawable/bg_btn_gold"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/createAccountSubtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!--Divider -->
        <View
            android:id="@+id/dividerLeft"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorDashInactive"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/btnGoogle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/dividerOr"
            app:layout_constraintBottom_toBottomOf="@id/dividerOr"/>

        <TextView
            android:id="@+id/dividerOr"
            android:layout_with="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:fontFamily="@font/outfit"
            android:textSize="13sp"
            android:textColor="@color/colorGold"
            android:paddingHorizontal="12dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/btnGoogle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constaintEnd_toEndOf="parent"/>




    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>